--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
         "bezier-easing": "^2.1.0",
         "crypto-js": "^4.2.0",
         "ky": "^1.1.3",
-        "pixi.js": "^7.3.2",
+        "pixi.js": "^8.0.0-rc.5",
         "vite": "^5.0.4"
     }
 }
