--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
         "bezier-easing": "^2.1.0",
         "crypto-js": "^4.2.0",
         "ky": "^1.1.3",
-        "pixi.js": "^8.0.0-rc.10",
+        "pixi.js": "^8.1.5",
         "vite": "^5.0.4"
     }
 }
