--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "axios": "^1.6.2",
         "bezier-easing": "^2.1.0",
         "crypto-js": "^4.2.0",
+        "easing-utils": "^1.0.0",
         "ky": "^1.1.3",
         "pixi.js": "^8.1.5",
         "vite": "^5.0.4"
