--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
         "test": "echo \"Error: no test specified\" && exit 1",
         "dev": "vite --port 8080 --mode development",
         "dev-host": "vite --host --port 8080 --mode development",
-        "build": "vite build"
+        "build": "vite build --sourcemap"
     },
     "repository": "git+https://github.com/FukutoTojido/beatmap-viewer-how.git",
     "author": "<lohoangkhoinguyen1812@gmail.com>",
@@ -31,6 +31,7 @@
         "easing-utils": "^1.0.0",
         "ky": "^1.1.3",
         "pixi.js": "^8.1.5",
-        "vite": "^5.0.4"
+        "vite": "^5.0.4",
+        "webm-muxer": "^4.0.1"
     }
 }
