feat: adding options to allow transcode video

--- a/package.json
+++ b/package.json
@@ -34,5 +34,8 @@
         "pixi.js": "^8.1.5",
         "vite": "^5.0.4",
         "webm-muxer": "^4.0.1"
+    },
+    "devDependencies": {
+        "vite-plugin-cross-origin-isolation": "^0.1.6"
     }
 }
