--- a/package.json
+++ b/package.json
@@ -33,9 +33,7 @@
         "ky": "^1.1.3",
         "pixi.js": "^8.1.5",
         "vite": "^5.0.4",
-        "webm-muxer": "^4.0.1"
-    },
-    "devDependencies": {
+        "webm-muxer": "^4.0.1",
         "vite-plugin-cross-origin-isolation": "^0.1.6"
     }
 }
