--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "type": "module",
   "private": true,
   "scripts": {
-    "start": "vite"
+    "dev": "vite",
+    "build": "vite build"
   },
   "devDependencies": {
     "@types/bun": "latest"
@@ -13,7 +14,13 @@
     "typescript": "^5"
   },
   "dependencies": {
+    "@tailwindcss/vite": "^4.1.4",
     "beatmap-viewer-web": ".",
+    "osu-classes": "^3.1.0",
+    "osu-parsers": "^4.1.7",
+    "osu-standard-stable": "^5.0.1",
+    "pixi.js": "^8.9.1",
+    "tailwindcss": "^4.1.4",
     "vite": "^6.3.2"
   }
 }
