--- a/package.json
+++ b/package.json
@@ -14,12 +14,15 @@
     "typescript": "^5"
   },
   "dependencies": {
-    "@pixi/layout": "^2.0.1",
+    "@pixi/devtools": "^2.0.1",
+    "@pixi/layout": "^3.0.2",
     "@tailwindcss/vite": "^4.1.4",
+    "@tweenjs/tween.js": "^25.0.0",
+    "bezier-easing": "^2.1.0",
     "osu-classes": "^3.1.0",
     "osu-parsers": "^4.1.7",
     "osu-standard-stable": "^5.0.1",
-    "pixi.js": "^8.9.1",
+    "pixi.js": "^8.9.2",
     "tailwindcss": "^4.1.4",
     "vite": "^6.3.2"
   }
