--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@pixi/layout": "^3.0.2",
     "@tailwindcss/vite": "^4.1.4",
     "@tweenjs/tween.js": "^25.0.0",
+    "axios": "^1.9.0",
     "bezier-easing": "^2.1.0",
     "osu-classes": "^3.1.0",
     "osu-parsers": "^4.1.7",
