--- a/package.json
+++ b/package.json
@@ -24,8 +24,9 @@
     "osu-classes": "^3.1.0",
     "osu-parsers": "^4.1.7",
     "osu-standard-stable": "^5.0.1",
+    "pixi-filters": "^6.1.2",
     "pixi.js": "^8.9.2",
     "tailwindcss": "^4.1.4",
-    "vite": "^6.3.2"
+    "vite": "^6.3.5"
   }
 }
