--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@pixi/devtools": "^2.0.1",
     "@pixi/layout": "^3.0.2",
+    "@soundcut/decode-audio-data-fast": "^2.0.1",
     "@tailwindcss/vite": "^4.1.4",
     "@tweenjs/tween.js": "^25.0.0",
     "@zip.js/zip.js": "^2.7.60",
