--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "pixi-filters": "^6.1.2",
     "pixi.js": "^8.9.2",
     "tailwindcss": "^4.1.4",
-    "vite": "^6.3.5"
+    "vite": "^6.3.5",
+    "web-demuxer": "^2.3.3"
   }
 }
