--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "typescript": "^5"
   },
   "dependencies": {
+    "@flatten-js/interval-tree": "^1.1.3",
     "@pixi/devtools": "^2.0.1",
     "@pixi/layout": "^3.0.2",
     "@soundcut/decode-audio-data-fast": "^2.0.1",
