--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@flatten-js/interval-tree": "^1.1.3",
     "@pixi/devtools": "^2.0.1",
     "@pixi/layout": "^3.0.2",
+    "@rian8337/osu-base": "^3.3.0",
     "@soundcut/decode-audio-data-fast": "^2.0.1",
     "@tailwindcss/vite": "^4.1.4",
     "@tweenjs/tween.js": "^25.0.0",
@@ -34,6 +35,7 @@
     "pixi.js": "^8.9.2",
     "tailwindcss": "^4.1.4",
     "vite": "^6.3.5",
+    "vite-plugin-node-polyfills": "^0.23.0",
     "web-demuxer": "^2.3.8"
   }
 }
