--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "osu-standard-stable": "^5.0.1",
     "pixi-filters": "^6.1.2",
     "pixi.js": "^8.9.2",
+    "remixicon": "^4.6.0",
     "tailwindcss": "^4.1.4",
     "vite": "^6.3.5",
     "vite-plugin-node-polyfills": "^0.23.0",
