--- a/package.json
+++ b/package.json
@@ -22,10 +22,12 @@
     "@soundcut/decode-audio-data-fast": "^2.0.1",
     "@tailwindcss/vite": "^4.1.4",
     "@tweenjs/tween.js": "^25.0.0",
+    "@types/d3": "^7.4.3",
     "@types/ini": "^4.1.1",
     "@zip.js/zip.js": "^2.7.60",
     "axios": "^1.9.0",
     "bezier-easing": "^2.1.0",
+    "d3": "^7.9.0",
     "ini": "^5.0.0",
     "js-ini": "^1.6.0",
     "ky": "^1.8.1",
