--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   "dependencies": {
     "@flatten-js/interval-tree": "^1.1.3",
     "@pixi/devtools": "^2.0.1",
-    "@pixi/layout": "^3.0.2",
+    "@pixi/layout": "^3.1.0",
     "@rian8337/osu-base": "^3.3.0",
     "@soundcut/decode-audio-data-fast": "^2.0.1",
     "@tailwindcss/vite": "^4.1.4",
@@ -31,6 +31,7 @@
     "ini": "^5.0.0",
     "js-ini": "^1.6.0",
     "ky": "^1.8.1",
+    "node-vibrant": "^4.0.3",
     "osu-classes": "npm:@fukutotojido/osu-classes",
     "osu-parsers": "^4.1.7",
     "osu-standard-stable": "^5.0.1",
