--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "axios": "^1.9.0",
     "bezier-easing": "^2.1.0",
     "d3": "^7.9.0",
+    "fast-sort": "^3.4.1",
     "ini": "^5.0.0",
     "js-ini": "^1.6.0",
     "ky": "^1.8.1",
