feat: option to reload default skins

--- a/public/skinning/argon/skin.ini
+++ b/public/skinning/argon/skin.ini
@@ -2,5 +2,13 @@
 Name: Argon
 Argon: True
 
+[Colours]
+Combo1: 241,116,0
+Combo2: 0,241,53
+Combo3: 0,82,241
+Combo4: 241,0,0
+Combo5: 232,235,0
+Combo6: 92,0,241
+
 [Fonts]
 HitCircleOverlap: 20
