--- a/package.json
+++ b/package.json
@@ -4,23 +4,24 @@
   "type": "module",
   "private": true,
   "scripts": {
-    "dev": "vite --port 8080",
-    "build": "vite build",
-    "preview": "vite preview --port 2000"
+    "dev": "bun --watch server.ts",
+    "build": "bun build --compile server.ts --external=lightningcss --target bun --outfile ./out/server",
+    "preview": "./server"
   },
   "devDependencies": {
-    "@types/bun": "latest"
+    "@types/bun": "^1.2.20"
   },
   "peerDependencies": {
     "typescript": "^5"
   },
   "dependencies": {
+    "@elysiajs/static": "^1.3.0",
     "@flatten-js/interval-tree": "^1.1.3",
     "@pixi/devtools": "^2.0.1",
     "@pixi/layout": "^3.1.0",
     "@rian8337/osu-base": "^3.3.0",
     "@soundcut/decode-audio-data-fast": "^2.0.1",
-    "@tailwindcss/vite": "^4.1.4",
+    "@tailwindcss/vite": "^4.1.12",
     "@tweenjs/tween.js": "^25.0.0",
     "@types/d3": "^7.4.3",
     "@types/ini": "^4.1.1",
@@ -28,20 +29,22 @@
     "axios": "^1.9.0",
     "bezier-easing": "^2.1.0",
     "d3": "^7.9.0",
+    "elysia": "^1.3.8",
+    "elysia-connect-middleware": "^0.0.6",
     "fast-sort": "^3.4.1",
     "ini": "^5.0.0",
     "js-ini": "^1.6.0",
     "ky": "^1.8.1",
+    "lightningcss": "^1.30.1",
     "node-vibrant": "^4.0.3",
     "osu-classes": "npm:@fukutotojido/osu-classes",
     "osu-parsers": "^4.1.7",
     "osu-standard-stable": "^5.0.1",
     "pixi-filters": "^6.1.2",
     "pixi.js": "^8.12.0",
-    "remixicon": "^4.6.0",
-    "tailwindcss": "^4.1.4",
+    "tailwindcss": "^4.1.12",
     "vite": "^6.3.5",
-    "vite-plugin-node-polyfills": "^0.23.0",
+    "vite-plugin-node-polyfills": "^0.24.0",
     "web-demuxer": "^2.3.8"
   }
 }
