--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "bun --watch server.ts",
     "build": "bun build --compile server.ts --external=lightningcss --target bun --outfile ./out/server",
-    "preview": "./server"
+    "preview": "NODE_ENV=production ./server"
   },
   "devDependencies": {
     "@types/bun": "^1.2.20"
