--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "private": true,
   "scripts": {
     "dev": "bun --watch server.ts",
-    "build": "bun build --compile server.ts --external=lightningcss --target bun --outfile ./out",
-    "preview": "NODE_ENV=production ./out"
+    "build": "NODE_ENV=production bun build --compile server.ts --external=lightningcss --target bun --outfile ./out",
+    "preview": "./out"
   },
   "devDependencies": {
     "@types/bun": "^1.2.20"
