--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "type": "module",
   "private": true,
   "scripts": {
-    "dev": "bun --watch server.ts",
-    "build": "NODE_ENV=production vite build && bun build --compile server.ts --external=lightningcss --target bun --outfile ./out",
+    "dev": "bun --watch server.tsx",
+    "build": "NODE_ENV=production vite build && bun build --compile server.tsx --external=lightningcss --target bun --outfile ./out",
     "preview": "./out"
   },
   "devDependencies": {
@@ -15,6 +15,7 @@
     "typescript": "^5"
   },
   "dependencies": {
+    "@elysiajs/html": "^1.3.1",
     "@elysiajs/static": "^1.3.0",
     "@flatten-js/interval-tree": "^1.1.3",
     "@pixi/devtools": "^2.0.1",
@@ -26,7 +27,7 @@
     "@types/d3": "^7.4.3",
     "@types/ini": "^4.1.1",
     "@zip.js/zip.js": "^2.7.60",
-    "axios": "^1.9.0",
+    "axios": "^1.11.0",
     "bezier-easing": "^2.1.0",
     "d3": "^7.9.0",
     "elysia": "^1.3.8",
