--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "typescript": "^5"
   },
   "dependencies": {
+    "@elysiajs/cors": "^1.3.3",
     "@elysiajs/html": "^1.3.1",
     "@elysiajs/static": "^1.3.0",
     "@flatten-js/interval-tree": "^1.1.3",
