--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "private": true,
   "scripts": {
     "dev": "bun --watch src/server/index.tsx",
-    "build": "vite build && NODE_ENV=production bun build --compile /src/server/index.tsx --external=lightningcss --target bun --outfile ./out",
-    "preview": "./out"
+    "build": "vite build && NODE_ENV=production bun build --compile src/server/index.tsx --external=lightningcss --target bun --outfile ./out/server",
+    "preview": "./out/server"
   },
   "devDependencies": {
     "@types/bun": "^1.2.20"
