--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@tweenjs/tween.js": "^25.0.0",
     "@types/d3": "^7.4.3",
     "@types/ini": "^4.1.1",
+    "@types/kd-tree-javascript": "^1.0.3",
     "@zip.js/zip.js": "^2.7.60",
     "axios": "^1.11.0",
     "bezier-easing": "^2.1.0",
@@ -36,6 +37,7 @@
     "fast-sort": "^3.4.1",
     "ini": "^5.0.0",
     "js-ini": "^1.6.0",
+    "kd-tree-javascript": "^1.0.3",
     "ky": "^1.8.1",
     "lightningcss": "^1.30.1",
     "node-vibrant": "^4.0.3",
