--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "pixi-filters": "^6.1.2",
     "pixi.js": "^8.12.0",
     "tailwindcss": "^4.1.12",
+    "tone": "^15.1.22",
     "vite": "^6.3.5",
     "vite-plugin-node-polyfills": "^0.24.0",
     "web-demuxer": "^3.0.2"
