--- a/package.json
+++ b/package.json
@@ -25,12 +25,14 @@
     "@soundcut/decode-audio-data-fast": "^2.0.1",
     "@tailwindcss/vite": "^4.1.12",
     "@tweenjs/tween.js": "^25.0.0",
+    "@types/colormap": "^2.3.4",
     "@types/d3": "^7.4.3",
     "@types/ini": "^4.1.1",
     "@types/kd-tree-javascript": "^1.0.3",
     "@zip.js/zip.js": "^2.7.60",
     "axios": "^1.11.0",
     "bezier-easing": "^2.1.0",
+    "colormap": "^2.3.2",
     "d3": "^7.9.0",
     "elysia": "^1.3.8",
     "elysia-connect-middleware": "^0.0.6",
@@ -50,6 +52,7 @@
     "tone": "^15.1.22",
     "vite": "^6.3.5",
     "vite-plugin-node-polyfills": "^0.24.0",
+    "wavesurfer.js": "^7.10.2",
     "web-demuxer": "^3.0.2"
   }
 }
