--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@tailwindcss/vite": "^4.1.12",
     "@tweenjs/tween.js": "^25.0.0",
     "@types/colormap": "^2.3.4",
+    "@types/crypto-js": "^4.2.2",
     "@types/d3": "^7.4.3",
     "@types/ini": "^4.1.1",
     "@types/kd-tree-javascript": "^1.0.3",
@@ -33,6 +34,7 @@
     "axios": "^1.11.0",
     "bezier-easing": "^2.1.0",
     "colormap": "^2.3.2",
+    "crypto-js": "^4.2.0",
     "d3": "^7.9.0",
     "elysia": "^1.3.8",
     "elysia-connect-middleware": "^0.0.6",
